many small layout changes and some new posts

--- a/_posts/music/2015-10-22-alik.md
+++ b/_posts/music/2015-10-22-alik.md
@@ -19,6 +19,6 @@ I have loved Alec Kopyt's music since my student days: someone passed me a recor
 
 There were a few things about it that stood out. There was a direct, no frills, simplicity in the arrangements that gave noone anywhere to hide. The musicians played with a rough attitude that had bags of style. The songs were raucous tales of Yiddish gangsters and hoodlums that I knew and loved from the stories of Isaac Babel. And the lead singer had a voice that was by turn gruff sandpaper and sweetness itself.
 
-He joined another band, the Amsterdam Klezmer Band, and toured the world with them. But their spit and polish, in my opinion, never came close to the raw authenticity of that first album by Poza. So when I saw him backstage at the Sziget Festival, I jumped at the chance.
+He joined another band, the Amsterdam Klezmer Band, and toured the world with them. But their spit and polish, in my opinion, never came close to the raw authenticity of that first album by Poza. So when I saw him backstage at the Sziget Festival, I jumped at the chance to invite him to London to record some raw songs.
 
-These as yet unreleased tracks, recorded in three days in a London winter, are what I was waiting to hear again these years.
+I put together a crack team of musicians, and we got to work. These as yet unreleased tracks, recorded in three days in a London winter, are what I was waiting to hear again these years.
