--- a/_posts/music/2015-10-22-lazlo.md
+++ b/_posts/music/2015-10-22-lazlo.md
@@ -5,7 +5,7 @@ title: "Lazlo/Kistehen"
 description: "The Hungarian punk poet"
 image: "lazlo_bw.jpg"
 category: "music"
-area: art
+area: political
 genre: ['political','pop', hungarian, punk]
 artist: [Kistehen, Lazlo]
 location: [UK, Hungary]
