--- a/_posts/music/2015-10-22-sevara.md
+++ b/_posts/music/2015-10-22-sevara.md
@@ -13,5 +13,16 @@ people: [Sevara Nazarkhan - voice, Marat Maksudi - keyboards]
 soundcloud-track: 
 tags: [uzbek, pop, Sevara Nazarkhan, Uzbekistan]
 ---
-
+{% assign ovv = site.posts | where: 'title', 'Oi Va Voi' %}
 {% include sideimage img="sevjon.jpg" text="In Tashkent with the leading lady." %}
+
+Sevara Nazarkhan is a wonderful singer from Uzbekistan with the voice of an angel. She has done everything there is to do, from girl band pop to traditional ritual music reserved for village men. She is feisty, incompromising and being with her in Tashkent is a bit like walking down the street in London with David Bowie: you cannot walk two paces without being mobbed by admirers.
+
+We had collaborated on <a href="{{ovv[0].url}}">early recordings</a> in London, where I had been impressed with the way she came up with an Uzbek folk tale based on the idea of 7 Brothers in about ten minutes flat.
+
+And so when the call came to travel to Tashkent to work with her on an English-language album, I couldn't refuse.
+
+I wrote lyrics for her in London, and spent four weeks in her studio in Tashkent working with her on phrasing, diction and enunciation. Her musical director had come up with elaborate arrangements that gave her little space to work with, so we stripped it all down and recorded all the songs as piano and vocal demos to see how they breathed.
+
+The album hasn't yet come to fruition as she appeared on the Russian version of X-Factor and became a major pop star there too, switching to Russian language songs. Spending ever more tie in London, no doubt she will have a crack at the UK version too. Watch this space.
+
