--- a/_posts/tech/2015-10-26-rebeats.md
+++ b/_posts/tech/2015-10-26-rebeats.md
@@ -4,8 +4,8 @@ category: "tech"
 year: 2014
 area: education 
 
-title: "ReBeats"
-description: "Can Music Videos Help You Learn English?"
+title: "Tonguesten"
+description: "What Do Music Videos Have To Do With The Future of Education?"
 image: Adele.jpeg
 icon: "jonascii.png"
 
@@ -16,4 +16,41 @@ tags: [tech, coding, education, lifelong learning]
 ---
 {% include JB/setup %}
 
-More information coming soon.
+{% assign ovv = site.posts | where: 'title', 'Oi Va Voi' %}
+
+I have been a keen linguist ever since I remember. I am blessed that my family live all over the world, and as such, grew up hearing different languages in the house when relatives came to visit. I was lucky enough to go to a school where languages were available, and had a teacher when I was thirteen who changed my life. Hani Al-Hawi was an Iraqi Christian with a large belly and a jolly demeanour. He played at being angry with the class, barking at them when they got things wrong, but had a heart of gold. From the first week in French class, he quietly gave me 'Bel Ami' by Guy De Maupassant, and told me that I was excused homework for the rest of the term if I read that.
+
+This kicked off a love of languages that has stayed with me. I know of no greater thrill that the first lessons in a new language, when you can start to see light through a previously impenetrable wall of sound.
+
+I spent a year in Russia studying trumpet, paying my way as an English teacher, using "Headway" by Cambridge University Press, a global standard in English as a Foreign Language, which also happens to be a terribly well-meaning, well-researched yawnfest.
+
+As a performing musician, I had seen the phenomenon of music and language close-up. In <a href="{{ovv[0]}}.url">Oi Va Voi</a>, we would often perform new songs on stage before recording them. I will never forget how an entire audience somewhere in Europe, consisting of English speakers of various abilities, can sing back a chorus line perfectly after a single listen. The music motivates them to listen and repeat. It is effortless learning, well outside any formal educational context. This image would not leave me be.
+
+I started to bore my friends with a kernel of an idea: could music videos - or any other Youtube videos that kids already love - be the core material for a new sor of English course.
+
+From my teaching days, I knew that the problem with language courses was one of motivation. Kids would learn English well if only they finished the course - but they never did, tending to drop out through lack of interest. At the same time, the same kids were consuming vast amounts of English language video content at home - in gaming, music or TV/film - but their parents were telling them off for listening to this <em>bad</em> language, rather than encouraging them to learn by themselves. All the kids I had ever met who learnt English well did it through this unofficial, self-directed learning. Surely these same principles could be applied in the classroom too?
+
+I asked an acquaintance working in the Google Translate team about the state of machine comprehension. My question was: "Can computers classify the language in music videos and TV programmes by their grammar, frequency and spelling well enough for them to be used in a formal educational context?"
+
+He replied that yes, while machines tend to get things wrong a small percentage of the time, automatic language tools had just reached a plateau after decades of research, and now was the perfect time to embark on an ambitious project like mine.
+
+I came across a contest organised by the Technology Strategy Board, now <a href="http://innovateuk.org">Innovate UK</a>, to design a second screen application for television, as part of a collaboration with Hat Trick Productions, the UK's biggest indie TV company. At that stage, the idea was nothing more than that, plus a feisty video pitch. 
+
+We got the money, I panicked, and set about finding a team. We built an Android demo for Hat Trick, which they liked a lot.
+
+We got more funding from Innovate UK, and were accepted into WAYRA, a tech accelerator run by multinational telco Telefonica.
+
+A year later, we had built <a href="http://rebeats.tv">ReBeats</a>, an online video game that overlays subtitles over music videos, and asks the student a simple yes or no question.
+
+ I realised at this point what I had bitten off.
+
+In launching my startup, I had inadvertantly thrown myself into multiple areas where I knew very little. I was a guy with a good idea, and the gift of the gab, and we were making a game that millions of users had to fall in love with, a hard enough task in itself. That was just the beginning.  I had to learn to speak many different dialects immediately: programming, finance, user experience, user interface design, corporate and contractual law, team management, recruitment, pedagogy, artificial intelligence, consumer marketing. I could not talk to the designers in the same language as the recruiters, or the accountant in the same language as the business managers. It was one hell of an upwards learning curve.
+
+
+
+
+
+
+
+
+
