--- a/_posts/music/2015-11-21-watch.md
+++ b/_posts/music/2015-11-21-watch.md
@@ -5,7 +5,7 @@ title: "Watch"
 description: "Alzheimer's collaboration with performance poet Leah Thorn"
 image: leah-1.jpg
 category: "music"
-area: art
+area: poetry
 genre: [soundtrack]
 artist: [Leah Thorn]
 location: [UK]
