small fixes, tag etc

--- a/_posts/music/2015-12-12-dj.md
+++ b/_posts/music/2015-12-12-dj.md
@@ -8,10 +8,10 @@ category: "music"
 area: dj
 location: [UK, Russia, Germany]
 genre: [DJ]
-artist: [Shtetl Superstars Sound System]
+artist: [Shtetl Superstars]
 people: [Yuriy Gurzhy]
 soundcloud-track: 243016202
-tags: [UK, Russia, Germany, DJ]
+tags: [UK, Russia, Germany, DJ, Shtetl Superstars]
 ---
 {% assign gagarin = site.posts | where: 'title', 'Radio Gagarin' %}
 {% assign shtetl = site.posts | where: 'title', 'Shtetl Superstars' %}
