--- a/_posts/tech/2015-10-26-rebeats.md
+++ b/_posts/tech/2015-10-26-rebeats.md
@@ -24,7 +24,7 @@ This kicked off a love of languages that has stayed with me. I know of no greate
 
 I spent a year in Russia studying trumpet, paying my way as an English teacher, using "Headway" by Cambridge University Press, a global standard in English as a Foreign Language, which also happens to be a terribly well-meaning, well-researched yawnfest.
 
-As a performing musician, I had seen the phenomenon of music and language close-up. In <a href="{{ovv[0]}}.url">Oi Va Voi</a>, we would often perform new songs on stage before recording them. I will never forget how an entire audience somewhere in Europe, consisting of English speakers of various abilities, can sing back a chorus line perfectly after a single listen. The music motivates them to listen and repeat. It is effortless learning, well outside any formal educational context. This image would not leave me be.
+As a performing musician, I had seen the phenomenon of music and language close-up. In <a href="{{ovv[0].url}}">Oi Va Voi</a>, we would often perform new songs on stage before recording them. I will never forget how an entire audience somewhere in Europe, consisting of English speakers of various abilities, can sing back a chorus line perfectly after a single listen. The music motivates them to listen and repeat. It is effortless learning, well outside any formal educational context. This image would not leave me be.
 
 I started to bore my friends with a kernel of an idea: could music videos - or any other Youtube videos that kids already love - be the core material for a new sor of English course.
 
@@ -45,6 +45,14 @@ A year later, we had built <a href="http://rebeats.tv">ReBeats</a>, an online vi
  I realised at this point what I had bitten off.
 
 In launching my startup, I had inadvertantly thrown myself into multiple areas where I knew very little. I was a guy with a good idea, and the gift of the gab, and we were making a game that millions of users had to fall in love with, a hard enough task in itself. That was just the beginning.  I had to learn to speak many different dialects immediately: programming, finance, user experience, user interface design, corporate and contractual law, team management, recruitment, pedagogy, artificial intelligence, consumer marketing. I could not talk to the designers in the same language as the recruiters, or the accountant in the same language as the business managers. It was one hell of an upwards learning curve.
+
+{% include videofull id="P8jhy7ZQC38" text="Language learning guru Michel Thomas" %}
+
+So I took a deep breath, taught myself to code, and enjoyed the ride. It has kickstarted a lifelong interest in education and educational methods, and one day I'll write my own language learning method too. Until then, I point everyone I know to the one and only Michel Thomas. It has given me the confidence to  put myself out of my comfort zone in almost any environment, and know that what comes out at least won't be worse than anyone else's efforts.
+
+Startups taught me how to do projects, and perhaps art in general: just get on with it. No idea that you ever have will be as good as it is in your head, so better to do lots of little, hacky experiments, and get as much raw feedback as you can.
+
+And I'll never do a startup again - at least, not until my next one.
 
 
 
