missing post pics

--- a/_posts/blog/2016-02-12-lokesh.md
+++ b/_posts/blog/2016-02-12-lokesh.md
@@ -3,7 +3,7 @@ layout: post
 year: 
 title: "The Prisoner"
 description: "Lokesh, eight and a half years old"
-image: "L.png"
+image: "autism.jpg"
 category: "blog"
 location: [India]
 topic: [autism, special needs, drugs]
