--- a/_posts/tech/2015-10-26-rebeats.md
+++ b/_posts/tech/2015-10-26-rebeats.md
@@ -34,7 +34,7 @@ I asked an acquaintance working in the Google Translate team about the state of 
 
 He replied that yes, while machines tend to get things wrong a small percentage of the time, automatic language tools had just reached a plateau after decades of research, and now was the perfect time to embark on an ambitious project like mine.
 
-I came across a contest organised by the Technology Strategy Board, now <a href="http://innovateuk.org">Innovate UK</a>, to design a second screen application for television, as part of a collaboration with Hat Trick Productions, the UK's biggest indie TV company. At that stage, the idea was nothing more than that, plus a feisty video pitch. 
+Now I had no excuses. I came across a contest organised by the Technology Strategy Board, now <a href="http://innovateuk.org">Innovate UK</a>, to design a second screen application for television, as part of a collaboration with <a href="https://www.hattrick.co.uk/">Hat Trick Productions</a>, the UK's biggest indie TV company. At that stage, the idea was nothing more than that, plus a feisty video pitch. 
 
 We got the money, I panicked, and set about finding a team. We built an Android demo for Hat Trick, which they liked a lot.
 
