major update, inc music CV and couple more blog entries

--- a/_posts/publications/2016-11-07-music-cv.md
+++ b/_posts/publications/2016-11-07-music-cv.md
@@ -1,75 +1,174 @@
- Back in London, he co-founded Lemez & Fridel, a central London recording and production studio, writing original music and lyrics for everything from big game developers like Smule and Ubisoft to children's theatre companies Tall Stories and Peut-Etre and starting the bands Shtetl Superstars and Yiddish Twist Orchestra.
+---
+layout: cv
+category: publications
+collection: publications
+title: "Music CV & Biography"
+description: "Overview of Music Work"
+topic: [music]
+image: yto-soho.jpg
+tags: [music, Oi Va Voi, Lemez & Fridel, Paul Epworth, Mike Spencer, EMI, Outcaste, Yad Arts, Dash Arts, hip-hop, songwriting, trumpet, composition, apps, film scores, DJ, performance]
+---
+{% assign carnatic = site.posts | where: "title", "At A Carnatic Concert, Pondicherry" %}
+{% assign app = site.posts | where: "title", "Music for Apps - Smule" %}
+{% assign xbloc = site.posts | where: "title", "X BLOC Reunion at The Barbican" %}
+{% assign weinstein = site.posts | where: "title", "What We Did To Weinstein" %}
+{% assign muaythai = site.posts | where: "title", "Muay Thai National Anthem" %}
+{% assign bar = site.posts | where: "title", "Commercial Subterfuge with Bar Rafaeli" %}
+{% assign cv = site.posts | where: "title", "Full Media & Publications List" %}
+{% assign yto = site.posts | where: "title", "Yiddish Twist Orchestra" %}
+{% assign ovv = site.posts | where: "title", "Oi Va Voi" %}
+{% assign shtetl = site.posts | where: "title", "Shtetl Superstars" %}
+{% assign latke = site.posts | where: "title", "The Latke Who Couldn't Stop Screaming" %}
+{% assign island = site.posts | where: "title", "The Island - Al Jones" %}
+{% assign bg = site.posts | where: "title", "Bulgarian Vocal Trio" %}
+{% assign lyrics = site.posts | where: "title", "Song Lyrics, Poetry and Creative Writing" %}
+{% assign adi = site.posts | where: "title", "Beat Teacher" %}
+{% assign alik = site.posts | where: "title", "Alec Kopyt" %}
+{% assign roma = site.posts | where: "title", "Little Miss Roma" %}
+{% assign sevara = site.posts | where: "title", "Sevara Nazarkhan" %}
+{% assign lazlo = site.posts | where: "title", "Lazlo/Kistehen" %}
+{% assign score = site.posts | where: "title", "SCORE: East and West" %}
+{% assign table = site.posts | where: "title", "The Table" %}
+{% assign lucy = site.posts | where: "title", "The Wild Ones" %}
+{% assign album61 = site.posts | where: "title", "Album 61" %}
+{% assign watch = site.posts | where: "title", "Watch" %}
+{% assign dj = site.posts | where: "title", "DJ-ing" %}
+{% assign ruth = site.posts | where: "title", "Ruth" %}
+{% assign gagarin = site.posts | where: "title", "Radio Gagarin - Experiments in Sunday Socialism" %}
+{% assign kkb = site.posts | where: "title", "Kharkov Klezmer Band" %}
+{% assign esc = site.posts | where: "title", "The Election Song Contest" %}
+{% assign shah = site.posts | where: "title", "Shahnameh" %}
+{% assign seder = site.posts | where: "title", "The Other Seder Quartet" %}
+{% assign dj = site.posts | where: "title", "DJ-ing" %}
+{% assign momoblog = site.posts | where: "title", "Publishing The Autobiography of Maurice El Medioni" %}
+<h2>Blurb</h2>
+> (_Written for the [Maurice El Medioni book]({{momoblog[0].url}})_)  
+
+> Composer, performer, writer, researcher and translator who has worked extensively on the stage, in the studio and in print. His research interests include critical technology, folklore and ritual culture, radical education, language acquisition, singing and vocal techniques, acoustics and sound, absurdist literature, computational linguistics, storytelling and children's culture, censorship, Russia and the former Soviet Union, Indian, Roma and Jewish culture, sacred music and art as activism.
+
+> He’s a BA/MA (Oxon) in Russian and French; studied Ethnomusicology with Hungarian at London University's School of Oriental and African Studies(SOAS); studied Hebrew and Arabic in Jerusalem for 2 years. His writing work includes: major report for Freemuse/UNESCO on music censorship in Belarus; numerous articles on music and arts for Songlines, fRoots and the Jewish Chronicle of which he was acting Arts Editor; conference coordinator and essayist for WOMEX, the annual World Music Industry Expo. 
+
+> Musician/producer under the artist name Lemez Lovas: with artists/producers including KT Tunstall, Mike Spencer, Paul Epworth and Maurice el Medioni; leader, arranger/composer for Oi Va Voi (Labels: Outcaste/EMI/V2) award winning future klezmer band (Dutch Edison International Album of the Year, BBC World Music Awards nominations, New York Times Critics' Top Ten Albums of the Year 2003)
+
+> Founder member of Shtetl Superstars and Yiddish Twist Orchestra; co-founder Lemez & Fridel, central London recording and production studio, writing original music and lyrics for companies including game developers Smule and Ubisoft and children's theatre companies Tall Stories and Peut-Etre; composed and performed original score for silent film East and West (dir. Ivan Abramson, Sidney M. Goldin starring Molly Picon 1923) in London, Paris and Jerusalem.
+
+> Media work: producing and presenting for BBC World Service, BBC Russian Service, BBC Radio 2, BBC Radio 3, CBC Canada, Resonance FM, STV; set up OpenAir Radio at SOAS; co-founded award winning independent TV production company, Jerusalem based Digress Media.
+
+> Most recently, he set up and ran Tonguesten, an education technology startup turning music videos into games for literacy and language learning.
+
+> He divides his time between London and Pondicherry, India.
+
+<h2>Music Biography</h2>
+For a list of lectures/broadcasting/music publications, please see <a href="{{cv[0].url}}">here</a>.
+
+<h3>2000</h3>
+[Kharkov Klezmer Band]({{kkb[0].url}}), *Ticking Again*, Music & Words, NL {% include music tag='production' %}    
+Hunting of the Snark, dir. [Dylan Ritson](http://www.imdb.com/name/nm1837012/), Crazy Horse Theatre Co., The Museum Of, London (with Oi Va Voi) {% include music tag='theatre' %}   
+
+<h3>2001-present</h3>
+200+ live concerts around UK, Europe, USA {% include music tag='performance' %}  
+<h3>2002</h3>
+[Oi Va Voi]({{ovv[0].url}}), *Digital Folklore*, self-release, UK {% include music tag='production' %}{% include music tag='songwriting' %}{% include music tag='arrangement' %}      
+Sitting Ducks, dir. <a href="https://iffr.com/en/persons/gerald-fox/">Gerry Fox</a>, UK (with Oi Va Voi){% include music tag='soundtrack' %}    
+Talking Tacheles, prod. <a href="http://www.imdb.com/name/nm0169214/">Andy Cohen</a>, A C Films, UK (with Oi Va Voi){% include music tag='soundtrack' %}    
+God of Vengeance, dir. Liselle Terret, Camden People’s Theatre, London, May 2002 (with Paul Epworth){% include music tag='theatre' %}      
+<h3>2003</h3>
+[Oi Va Voi]({{ovv[0].url}}), *Laughter Through Tears*, EMI/Outcaste, UK{% include music tag='songwriting' %}{% include music tag='arrangement' %}   
+[X-Bloc Reunion]({{xbloc[0].url}}), Barbican Centre, London (with Yad Arts){% include music tag='curation' %}  
+Movement of the People/Roots to Reconciliation, monthly, Cargo, London (with The Shrine & Yad Arts){% include music tag='DJ' %} {% include music tag='curation' %}    
+[Sanhedrin](www.jewishfilm.com/jz41.html) (short), dir. Simon Brasse, UK (with Oi Va Voi){% include music tag='soundtrack' %}   
+<h3>2004</h3>
+[Regular DJ-ing across London]({{dj[0].url}}) (Cargo, Notting Hill Arts Club, Madame Jojos) and in Europe {% include music tag='DJ' %}   
+<a href="{{watch[0].url}}">Watch</a>, dir. Leah Thorne, plus adaptation for BBC Radio 4 (with Moshikop) {% include music tag='theatre' %}  
+<h3>2005</h3>
+[Radio Gagarin - Experiments in Sunday Socialism]({{gagarin[0].url}}), Notting Hill Arts Club, London 2005-09 (with Friends of Gagarin, DJ Max Reinhardt, Yad Arts){% include music tag='DJ' %}{% include music tag='curation' %}  
+[Election Song Contest - Grand Finale]({{esc[0].url}}), Darbukka, London {% include music tag='curation' %}{% include music tag='DJ' %}    
+Hoop Lane, dir. Mark Rosenblatt, writer Patrick Marber, ICA, London {% include music tag='theatre' %}{% include music tag='performance' %}  
+ <a href="https://letterboxd.com/film/surviving-the-terror">Surviving The Terror</a>, dir. Jutta Feit, ZDF, Germany (with Nik Ammar) {% include music tag='soundtrack' %}  
+ <a href="{{weinstein[0].url}}">What We Did To Weinstein</a>, dir. Tim Supple, prod. Josephine Burton for Dash Arts, Menier Chocolate Factory, London (with Yaniv Fridel){% include music tag='theatre' %}  
+<h3>2006</h3>
+[Shtetl Superstars compilation]({{shtetl[0].url}}), Trikont Records, Germany (with Yuriy Gurzhy) {% include music tag='curation' %}  
+<h3>2007</h3>
+<a href="{{ovv[0].url}}">Oi Va Voi</a>, *Oi Va Voi*, V2, UK  {% include music tag='songwriting' %}{% include music tag='arrangement' %}     
+<a href="https://www.youtube.com/watch?v=yk3Uw23Rz3U"> Romantik</a>, dir. Sinan Cetin, Turkey (trumpet) {% include music tag='soundtrack' %}    
+<h3>2008</h3>
+[SCORE - East and West]({{score[0].url}}), dir. Sidney M. Goldin and Ivan Abramson (1923), silent film soundtrack at Barbican Centre / Purcell Room, London and internationally {% include music tag='soundtrack' %} {% include music tag='performance' %}   
+<a href="{{roma[0].url}}"> Little Miss Roma</a>, dir. Vesna Cudic, Croatia {% include music tag='soundtrack' %}    
+<a href="{{ruth[0].url}}">Ruth</a>, dir. Keren Abitan, Israel (with Yaniv Fridel){% include music tag='soundtrack' %}  
+<h3>2009</h3>
+<a href="{{shah[0].url}}">Shahnameh</a>, dir. Tim Supple, Royal National Theatre Studios, London, 2009-10 {% include music tag='theatre' %}    
+<h3>2010</h3>
+[Lyrical Alliance](http://www.dasharts.org.uk/archive/arabic/lyrical.html) - Arab Hip-hop Summit, prod. Josephine Burton for Dash Arts, Roundhouse London, UK  {% include music tag='curation' %}  
+<a href="{{table[0].url}}">The Table</a>, dir. Mark Down, Blind Summit, prod. Josephine Burton for Yad Arts, Soho Theatre, London and international (with Yaniv Fridel) {% include music tag='theatre' %}  
+<a href="{{shtetl[0].url}}">Louis Theroux - The Ultra Zionists</a>, dir. Andy Wells, BBC Films, UK {% include music tag='soundtrack' %}  
+<h3>2011</h3>
+<a href="{{lazlo[0].url}}">Lazlo (Kistehen / Little Cow)</a>, *Venus EP*, self-release, UK {% include music tag='mixing' %}{% include music tag='songwriting' %}    
+<a href="{{lucy[0].url}}"> The Wild Ones</a>, dir. Lucy Kaye, UK (with Yaniv Fridel)  {% include music tag='soundtrack' %}     
+<a href="{{sevara[0].url}}">Sevara Nazarkhan</a>, *English Songs LP*, Uzbekistan (with Sevara Nazarkhan) {% include music tag='songwriting' %}    
+[Songify]({{app[0].url}}), app for IOS/Android, Khush/Smule (with Yaniv Fridel) {% include music tag='composition' %}  
+<a href="{{sitcom[0].url}}">Esephus Schmephesus</a>, dir. Mark Rosenblatt for Sixty-Six Books, Bush Theatre, London {% include music tag='theatre' %}  
+<a href="{{seder[0].url}}">The Other Seder - String Trio & Percussion</a>, dir. Mark Rosenblatt, prod. Josephine Burton for Dash Arts, Tricycle Theatre, London {% include music tag='theatre' %}    
+<h3>2012</h3>
+[Singing Santa]({{app[0].url}}), app for IOS/Android, Khush/Smule (with Yaniv Fridel) {% include music tag='composition' %}  
+<a href="{{muaythai[0].url}}">We Are Muay Thai</a>, *International Federation of MuayThai*, Uzbekistan (with Sevara Nazarkhan)  {% include music tag='songwriting' %}    
+<a href="{{shtetl[0].url}}">Shtetl Superstars</a>, *A Day In The Life*, Skycap, DE {% include music tag='production' %}{% include music tag='mix' %}{% include music tag='songwriting' %}{% include music tag='arrangement' %}       
+<a href="http://peutetretheatre.co.uk/productions/the-tin-soldier/">The Tin Soldier</a>, dir. Daphna Attias, Peut-Etre, Roundhouse, London and nationwide (with Yaniv Fridel) {% include music tag='theatre' %}  
+<a href="{{latke[0].url}}">The Latke Who Wouldn't Stop Screaming</a>, dir. Olivia Jacobs, Tall Stories, prod. Josephine Burton for Yad Arts, Roundhouse London and nationwide, 2012-4 (with Yaniv Fridel) {% include music tag='theatre' %}     
+<a href="{{bar[0].url}}">Under.Me</a>, International Underwear Collection, 2012 (with Yaniv Fridel)  {% include music tag='commercial' %}  
+<h3>2013</h3>
+<a href="{{alik[0].url}}">Alec Kopyt</a>, *Raw EP*, UK {% include music tag='production' %}{% include music tag='mix' %}{% include music tag='arrangement' %}  
+<a href="{{album61[0].url}}"> Album 61</a>, dir. Halil Efrat, Israel, 2012 (with Yaniv Fridel) {% include music tag='soundtrack' %}     
+<a href="http://peutetretheatre.co.uk/productions/draw-me-a-bird/">Draw Me A Bird</a>, dir. Daphna Attias, Peut-Etre, UK nationwide, 2013 (with Yaniv Fridel)  {% include music tag='theatre' %}   
+<a href="{{bg[0].url}}">The Other Seder - Bulgarian Vocal Trio</a>, prod. Josephine Burton for Dash Arts, Jackson's Lane, London {% include music tag='theatre' %}   
+[The Island - Al Jones]({{island[0].url}}), *Echoes From The Mountain*, Rif Mountain Records, UK (with Yaniv Fridel & Ben Mandelson) {% include music tag='production' %}{% include music tag='arrangement' %}{% include music tag='performance' %}   
+[Autorap]({{app[0].url}}), app for IOS/Android, Khush/Smule (with Yaniv Fridel) {% include music tag='composition' %}   
+<h3>2014</h3>  
+<a href="{{yto[0].url}}">Yiddish Twist Orchestra</a>, *Let's*, Bergmanton, UK {% include music tag='production' %}{% include music tag='mix' %}{% include music tag='arrangement' %}          
+<a href="{{watch[0].url}}">Watch</a>, dir. Ewan Golder / Leah Thorne, UK (with Moshikop){% include music tag='soundtrack' %}       
+<h3>2015</h3> 
+[Adishakti Ensemble]({{adi[0].url}}), Pondicherry Heritage Festival, India {% include music tag='arrangement' %}{% include music tag='performance' %}    
+[Carnatic Vocal Training]({{carnatic[0].url}}), Pondicherry, India, 2015-ongoing {% include music tag='study' %} 
+
+***
+
+<h2>Selected Humblebrags</h2>
+<h4>Songwriting & Arrangement (Oi Va Voi)</h4>
+- ‘Memorable and melodic songwriting skills’    _Evening Standard_  
+- ‘Mesmerising, innovative music with substance.’   _New York Times_  
+- ‘Beautifully crafted and richly textured’   _The Sun_  
+- ‘[Music of] uncommon grace, diversity and beauty’   _BBCi_  
+- ‘Great tunes… a classic to rank alongside Everything But The Girl “Walking Wounded”’  _Sunday Telegraph_  
+- ‘The deluge of ideas leaves you breathless with wonder’   _Independent_  
+- ‘[Lemez Lovas is ]an impressive songwriter of growing stature’     _HMV Magazine_  
+- Top Ten Album of the Year, New York Times, 2003
+- Boundary Crossing Award shortlist, BBC Radio 3 Awards, 2003
+- Listeners Award shortlist, BBC Radio 3 Awards, 2003
+- No.1 World Music Album (European Broadcasting Union), Sept-Nov 2003
+- Critics Album of the Year shortlist, BBC Radio 3 Awards 2004
+- World Album Of The Year, Dutch National “Edison” Awards 2004
+
+<h4>Theatre</h4>
+- Best New Work nomination for What We Did To Weinstein, 51st London Evening Standard Theatre Awards
+- ‘Lemez Lovas and Yaniv Fridel's low-level soundscapes are excellently disquieting’    _Financial Times_  
+- ‘Haunting soundscapes… played with aplomb’    _Time Out_ 
+
+<h4>Film</h4>
+- Best Director, Documentary: Halil Efrat for Album 61, Jerusalem International FF, 2013 
+- Audience Prize, In the Shadow of King David, Nimes Archaeology Film Festival 2009
+- Best Soundtrack nomination, Ruth, Filmmaker Film Festival 2009
+- Best Film under 65 Mins, Ruth, Swansea Bay International Film Festival 2009 
  
-His fifteen plus years of collaboration with Josephine Burton (Yad Arts, Dash Arts) has seen them running long-standing club nights at the ICA and Notting Hill Arts Club, programming major festivals at the Barbican and South Bank Centre, curating Arab hip-hop at the Roundhouse and performing his original score for the Molly Picon silent film "East and West" in London, Paris and Jerusalem.
+<h4>Curation (Shtetl Superstars, Trikont)</h4> 
+- ‘A far-reaching, revitalising, boundary-pushing compilation’ _Songlines_  
+- ‘The most purely entertaining CD I’ve heard in a long time’ _fRoots_  
+- ‘One of the albums of the year,’  _20 Cent Magazine, Germany_  
 
-RECORDINGS
 
-
-Trumpet
-ADISHAKTI
-Rohan Theatre Band
+<!-- Rohan Theatre Band
 Beshodrom
-
-
-Production / Songwriting / Composition / Arrgt
-bulgarian trio - ladino songs
 Second Train Meditation
-OVV
-YTO
-Shtetl
-Sevara
-Alik
-Lazlo / Kistehen
-The Island
-Under Pressure
-We are Muay Thai
-Ticking Again, Kharkov Klezmer Band, Music&Words, NL, 2003 (producer);
-Laughter Through Tears, Oi Va Voi, Outcaste Records, 2003 (composition, performing);
-Digital Folklore, Oi Va Voi, 2002 (composition, performing)
 Staro Misto
 Ofer Bashan
-Khush - Autorap, Singing Santa, Songify
+Khush - Autorap, Singing Santa, Songify -->
 
 
-Film Scores
-Small Blood Drive Victories dir. Jutta Feit, ZDF, Germany (original score with Nik Ammar)
-Romantik, Sinan Cepin, 2003, Turkey (trumpet);
-Sitting Ducks, dir. Gerry Fox, UK, 2003 (with Oi Va Voi);
-Sanhedrin, dir. Simon Brasse, UK, 2003 (with Oi Va Voi)
-Talking Tacheles, A C Films, 2002 (with Oi Va Voi);
-East and West
-Little Miss Roma
-Teen Horse
-Album 61
-Watch
-Ruth
-
-KIDS
-
-
-Theatre
-Watch (dir. Leah Thorne), January 2005, plus adaptation for BBC Radio 4 (original score with Moshikop);
-God of Vengeance (dir. Liselle Terret), Camden People’s Theatre, London, May 2001 (original score with Paul Epworth);
-Hunting of the Snark (dir. Dylan Ritson), Crazy Horse Theatre Co.; The Museum Of, London, April 2000 (with Oi Va Voi);
-Latke
-The Table
-Shahnameh
-Weinstein
-Sitcom - Bush Theatre
-Watch
-Other SeDER QTET
-
-Musical Director / DJ
-Director / DJ / performer: Radio Gagarin, Experiments in Sunday Socialism, Notting Hill Arts Club, London W2 March 2005 – ongoing
-Regular DJ at bi-monthly night Costa Urbana, Notting Hill Arts Club, 2004 – ongoing
-Main Programming Consultant, X BLOC Reunion Festival, Barbican Centre, May – June 2003
-DJ / Programmer, Roots to Reconciliation, Cargo, London, March -September 2003 
-DJ / Programmer, Movement of the People, Cargo, London, October 2003 – May 2004 
-Guest DJ, Barrio Chino, Athens, 6th May 2005
-Election Song Contest
-
-Recordings
-
-
-Live performance
-Hundreds of concerts (trumpet, vocals, DJ) with Oi Va Voi around UK, Europe, USA: 2001 - ongoing
