--- a/_posts/publications/2016-11-07-music-cv.md
+++ b/_posts/publications/2016-11-07-music-cv.md
@@ -116,7 +116,7 @@ Hoop Lane, dir. Mark Rosenblatt, writer Patrick Marber, ICA, London {% include m
 <a href="{{latke[0].url}}">The Latke Who Wouldn't Stop Screaming</a>, dir. Olivia Jacobs, Tall Stories, prod. Josephine Burton for Yad Arts, Roundhouse London and nationwide, 2012-4 (with Yaniv Fridel) {% include music tag='theatre' %}     
 <a href="{{bar[0].url}}">Under.Me</a>, International Underwear Collection, 2012 (with Yaniv Fridel)  {% include music tag='commercial' %}  
 <h3>2013</h3>
-<a href="{{alik[0].url}}">Alec Kopyt</a>, *Raw EP*, UK {% include music tag='production' %}{% include music tag='mix' %}{% include music tag='arrangement' %}  
+<a href="{{alik[0].url}}">Alec Kopyt</a>, *Raw EP*, UK (with Yaniv Fridel){% include music tag='production' %}{% include music tag='mix' %}{% include music tag='arrangement' %}  
 <a href="{{album61[0].url}}"> Album 61</a>, dir. Halil Efrat, Israel, 2012 (with Yaniv Fridel) {% include music tag='soundtrack' %}     
 <a href="http://peutetretheatre.co.uk/productions/draw-me-a-bird/">Draw Me A Bird</a>, dir. Daphna Attias, Peut-Etre, UK nationwide, 2013 (with Yaniv Fridel)  {% include music tag='theatre' %}   
 <a href="{{bg[0].url}}">The Other Seder - Bulgarian Vocal Trio</a>, prod. Josephine Burton for Dash Arts, Jackson's Lane, London {% include music tag='theatre' %}   
